accordion wrap fix

--- a/docroot/profiles/panopoly/modules/panopoly/panopoly_theme/css/panopoly-accordian.css
+++ b/docroot/profiles/panopoly/modules/panopoly/panopoly_theme/css/panopoly-accordian.css
@@ -1,7 +1,7 @@
 h2.ui-accordion-header {
   cursor: pointer;
-  display: inline-block;
-  padding: .25em 1.75em;
+  position: relative;
+  padding: 0 0 0 20px !important;
   color: #000 !important;
   font-family: "News Gothic Old";
   font-weight: bold;
@@ -12,12 +12,28 @@ h2.ui-accordion-header {
   font-size: 1.125rem !important;
   text-transform: none !important;
   letter-spacing: normal !important;
+  border-bottom: 0 !important;
   background-color: transparent;
   border-color: transparent;
 }
 
+.ui-state-hover {
+  border: 0 !important; 
+  background: transparent !important; 
+  font-weight: bold !important; 
+  color: #000 !important;
+  font-size: 1.125rem !important;
+  text-transform: none !important;
+  letter-spacing: normal !important;
+  border-bottom: 0 !important;
+  overflow: hidden;
+  float: none;
+}
+
 .ui-icon {
-  display: inline-block !important;
+  left: 0;
+  position: absolute;
+  top: 0;
 }
 
 .ui-accordion .ui-accordion-header-active {
@@ -27,8 +43,6 @@ h2.ui-accordion-header {
 }
 
 .ui-accordion .accordion-content {
-  font-size: .8em;
-  padding: .25em 2em .5em 2em;
   background-color: transparent;
   border-color: transparent;
 }
